--- a/tests/main.html
+++ b/tests/main.html
@@ -5,6 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="/static/js/script.js"></script>
         <script src="/static/js/file.js"></script>
+        <script src="/static/js/tab.js"></script>
         <link rel="stylesheet" href="/static/css/style.css">
         <link rel="stylesheet" href="/static/css/modal.css">
         <link rel="stylesheet" href="/static/css/tab.css">
@@ -80,11 +81,11 @@
             <h2>FTS4VMC</h2>
             <h3>FTS</h3>
             <div class="tab">
-                <button title="Console log" type="button" id="console_tab">Console</button>
-                <button title="FTS/MTS source code" type="button" id="source_tab">Source</button>
-                <button title="FTS/MTS as graph" type="button" id="graph_tab">Graph</button>
-                <button title="Summary of detected ambiguities" type="button" id="summary_tab">Summary</button>
-                <button title="Counterexample for the property"type="button" id="counter_graph_tab" disabled>Counterexample graph</button>
+                <button class="selected-tab" title="Console log" type="button" id="console_tab">Console</button>
+                <button class="tab-button" title="FTS/MTS source code" type="button" id="source_tab">Source</button>
+                <button class="tab-button" title="FTS/MTS as graph" type="button" id="graph_tab">Graph</button>
+                <button class="tab-button" title="Summary of detected ambiguities" type="button" id="summary_tab">Summary</button>
+                <button class="tab-button" title="Counterexample for the property"type="button" id="counter_graph_tab" disabled>Counterexample graph</button>
                 <button type="button" id="message"></button>
                 <a id="downloader"href="" download="" style="display: none">Download</a>
             </div>
